--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -21,6 +21,9 @@
   "selectIcon": "Select Icon",
   "defaultIcon": "Default Icon",
   "customIcon": "Custom Icon",
+  "upload": "Upload",
+  "uploadCustomIcon": "Upload Custom Icon (max 512x512, 1MB)",
+  "customIconUploaded": "Custom icon uploaded successfully",
   "save": "Save",
   "cancel": "Cancel",
   "delete": "Delete",
@@ -57,5 +60,50 @@
   "successfullyImported": "Successfully imported",
   "failedToImport": "Failed to import",
   "errorImportingItems": "Error importing items",
-  "close": "Close"
+  "error": "Error",
+  "ok": "OK",
+  "close": "Close",
+  "importPackage": "Import Package",
+  "importPackageTooltip": "Import package from ZIP file",
+  "selectPackageZipFile": "Select Package ZIP File",
+  "couldNotAccessFile": "Could not access the selected file.",
+  "importingPackage": "Importing package...",
+  "packageImportedSuccessfully": "Package imported successfully!",
+  "packageImportedWithItems": "Package imported successfully! ({count} items)",
+  "importError": "Import Error",
+  "failedToImportPackage": "Failed to import package",
+  "packageAlreadyExists": "Package already exists",
+  "packageExistsMessage": "A package with the same language pair, description, author information, and version already exists. Would you like to import it as a new package anyway?",
+  "importAsNew": "Import Anyway",
+  "zipFileNotFound": "ZIP file not found",
+  "invalidPackageZip": "Invalid package ZIP: missing package_data.json",
+  "invalidPackageFormat": "Invalid package file format",
+  "languagePackages": "Language Packages",
+  "loadingPackages": "Loading packages...",
+  "tapAndHoldToReorder": "Tap and hold to reorder cards",
+  "tapAndHoldToReorderList": "Tap and hold ≡ to reorder • Tap ⋮ to toggle compact view",
+  "noPackagesYet": "No packages yet",
+  "createFirstPackage": "Create your first language package",
+  "versionLabel": "Version",
+  "purchased": "Purchased",
+  "compactView": "Compact view",
+  "expand": "Expand",
+  "allCategories": "All Categories",
+  "categoriesInPackage": "Categories in this package",
+  "testInterFonts": "Test Inter Fonts",
+  "viewPackages": "View Packages",
+  "createNewPackage": "Create New Package",
+  "generateTestData": "Generate Test Data",
+  "designSystemShowcase": "Design System Showcase",
+  "badgeEarned": "Badge Earned!",
+  "achievement": "Achievement",
+  "awesome": "Awesome!",
+  "importFormatNotes": "Notes:",
+  "importFormatLine1": "• Each line represents one item",
+  "importFormatLine2": "• Fields are separated by |",
+  "importFormatLine3": "• Categories are separated by ;",
+  "importFormatLine4": "• The last | is optional",
+  "importFormatLine5": "• Empty lines are ignored",
+  "importFormatLine6": "• Duplicates are skipped",
+  "andMore": "... and {count} more"
 }
