--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -21,6 +21,9 @@
   "selectIcon": "Ikon kiválasztása",
   "defaultIcon": "Alapértelmezett ikon",
   "customIcon": "Egyéni ikon",
+  "upload": "Feltöltés",
+  "uploadCustomIcon": "Egyéni ikon feltöltése (max 512x512, 1MB)",
+  "customIconUploaded": "Egyéni ikon sikeresen feltöltve",
   "save": "Mentés",
   "cancel": "Mégse",
   "delete": "Törlés",
@@ -57,5 +60,50 @@
   "successfullyImported": "Sikeresen importálva",
   "failedToImport": "Importálás sikertelen",
   "errorImportingItems": "Hiba az elemek importálása során",
-  "close": "Bezárás"
+  "error": "Hiba",
+  "ok": "OK",
+  "close": "Bezárás",
+  "importPackage": "Csomag importálása",
+  "importPackageTooltip": "Csomag importálása ZIP fájlból",
+  "selectPackageZipFile": "Válasszon csomag ZIP fájlt",
+  "couldNotAccessFile": "A kiválasztott fájl nem érhető el.",
+  "importingPackage": "Csomag importálása...",
+  "packageImportedSuccessfully": "Csomag sikeresen importálva!",
+  "packageImportedWithItems": "Csomag sikeresen importálva! ({count} elem)",
+  "importError": "Importálási hiba",
+  "failedToImportPackage": "Nem sikerült a csomag importálása",
+  "packageAlreadyExists": "A csomag már létezik",
+  "packageExistsMessage": "Már létezik egy csomag ugyanezzel a nyelvpárral, leírással, szerző információval és verzióval. Szeretné mindenképpen új csomagként importálni?",
+  "importAsNew": "Importálás mindenképpen",
+  "zipFileNotFound": "ZIP fájl nem található",
+  "invalidPackageZip": "Érvénytelen csomag ZIP: hiányzik a package_data.json",
+  "invalidPackageFormat": "Érvénytelen csomag fájlformátum",
+  "languagePackages": "Nyelvi csomagok",
+  "loadingPackages": "Csomagok betöltése...",
+  "tapAndHoldToReorder": "Érintse meg és tartsa lenyomva az átrendezéshez",
+  "tapAndHoldToReorderList": "Érintse meg és tartsa ≡ az átrendezéshez • Érintse ⋮ a kompakt nézethez",
+  "noPackagesYet": "Még nincs csomag",
+  "createFirstPackage": "Hozza létre az első nyelvi csomagját",
+  "versionLabel": "Verzió",
+  "purchased": "Megvásárolt",
+  "compactView": "Kompakt nézet",
+  "expand": "Kibontás",
+  "allCategories": "Összes kategória",
+  "categoriesInPackage": "Kategóriák ebben a csomagban",
+  "testInterFonts": "Inter betűtípusok tesztelése",
+  "viewPackages": "Csomagok megtekintése",
+  "createNewPackage": "Új csomag létrehozása",
+  "generateTestData": "Teszt adatok generálása",
+  "designSystemShowcase": "Designrendszer bemutató",
+  "badgeEarned": "Jelvény megszerzése!",
+  "achievement": "Teljesítmény",
+  "awesome": "Remek!",
+  "importFormatNotes": "Megjegyzések:",
+  "importFormatLine1": "• Minden sor egy elemet képvisel",
+  "importFormatLine2": "• A mezőket | karakter választja el",
+  "importFormatLine3": "• A kategóriákat ; karakter választja el",
+  "importFormatLine4": "• Az utolsó | opcionális",
+  "importFormatLine5": "• Az üres sorok figyelmen kívül maradnak",
+  "importFormatLine6": "• A duplikátumok kihagyásra kerülnek",
+  "andMore": "... és még {count}"
 }
