--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,7 +45,7 @@
   "clear": "Clear",
   "countersCleared": "Counters cleared successfully",
   "errorClearingCounters": "Error clearing counters",
-  "deleteAll": "Delete All Data",
+  "deleteAll": "Delete Package",
   "confirmDeleteAllData": "Are you sure you want to delete this package with ALL its data? This will permanently delete all categories, items, and training statistics. This action cannot be undone!",
   "allDataDeleted": "Package and all data deleted successfully",
   "exportPackage": "Export Package",
@@ -70,10 +70,11 @@
   "importingPackage": "Importing package...",
   "packageImportedSuccessfully": "Package imported successfully!",
   "packageImportedWithItems": "Package imported successfully! ({count} items)",
+  "packageImportedWithGroup": "Package imported to \"{groupName}\" group! ({count} items)",
   "importError": "Import Error",
   "failedToImportPackage": "Failed to import package",
   "packageAlreadyExists": "Package already exists",
-  "packageExistsMessage": "A package with the same language pair, description, author information, and version already exists. Would you like to import it as a new package anyway?",
+  "packageExistsMessage": "A package with the same language pair, description, author information, and version already exists in the \"{groupName}\" group. Would you like to import it as a new package anyway?",
   "importAsNew": "Import Anyway",
   "zipFileNotFound": "ZIP file not found",
   "invalidPackageZip": "Invalid package ZIP: missing package_data.json",
@@ -105,5 +106,31 @@
   "importFormatLine4": "• The last | is optional",
   "importFormatLine5": "• Empty lines are ignored",
   "importFormatLine6": "• Duplicates are skipped",
-  "andMore": "... and {count} more"
+  "andMore": "... and {count} more",
+  "browseItems": "Browse Items",
+  "itemDetails": "Details",
+  "filterItems": "Filter Items",
+  "searchLanguage1": "Search in {language}",
+  "searchLanguage2": "Search in {language}",
+  "caseSensitive": "Case sensitive",
+  "onlyImportant": "Only important items",
+  "knownStatus": "Known status",
+  "allItems": "All items",
+  "itemsIKnew": "Items I knew",
+  "itemsIDidNotKnow": "Items I did not know",
+  "known": "Known",
+  "important": "Important",
+  "favourite": "Favourite",
+  "examples": "Examples",
+  "noExamples": "No examples available",
+  "pronounce": "Pronounce",
+  "ttsError": "Text-to-speech not available",
+  "noItemsFound": "No items found",
+  "noItemsInPackage": "No items in this package yet",
+  "clearFilters": "Clear Filters",
+  "itemCount": "{count} items",
+  "filteredItemCount": "{filtered} of {total} items",
+  "trainingRally": "Training Rally",
+  "startTraining": "Start Training",
+  "trainingComingSoon": "Training Rally - Coming Soon!"
 }
