--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -45,7 +45,7 @@
   "clear": "Törlés",
   "countersCleared": "Számlálók sikeresen törölve",
   "errorClearingCounters": "Hiba a számlálók törlése során",
-  "deleteAll": "Minden adat törlése",
+  "deleteAll": "Csomag törlése",
   "confirmDeleteAllData": "Biztosan törölni szeretné ezt a csomagot az ÖSSZES adatával? Ez véglegesen törli az összes kategóriát, elemet és edzési statisztikát. Ez a művelet nem vonható vissza!",
   "allDataDeleted": "Csomag és minden adat sikeresen törölve",
   "exportPackage": "Csomag exportálása",
@@ -70,6 +70,7 @@
   "importingPackage": "Csomag importálása...",
   "packageImportedSuccessfully": "Csomag sikeresen importálva!",
   "packageImportedWithItems": "Csomag sikeresen importálva! ({count} elem)",
+  "packageImportedWithGroup": "Csomag importálva a \"{groupName}\" csoportba! ({count} elem)",
   "importError": "Importálási hiba",
   "failedToImportPackage": "Nem sikerült a csomag importálása",
   "packageAlreadyExists": "A csomag már létezik",
@@ -105,5 +106,31 @@
   "importFormatLine4": "• Az utolsó | opcionális",
   "importFormatLine5": "• Az üres sorok figyelmen kívül maradnak",
   "importFormatLine6": "• A duplikátumok kihagyásra kerülnek",
-  "andMore": "... és még {count}"
+  "andMore": "... és még {count}",
+  "browseItems": "Elemek böngészése",
+  "itemDetails": "Részletek",
+  "filterItems": "Elemek szűrése",
+  "searchLanguage1": "Keresés ebben: {language}",
+  "searchLanguage2": "Keresés ebben: {language}",
+  "caseSensitive": "Kis- és nagybetű érzékeny",
+  "onlyImportant": "Csak fontos elemek",
+  "knownStatus": "Tudás állapota",
+  "allItems": "Minden elem",
+  "itemsIKnew": "Elemek, amiket tudtam",
+  "itemsIDidNotKnow": "Elemek, amiket nem tudtam",
+  "known": "Tudom",
+  "important": "Fontos",
+  "favourite": "Kedvenc",
+  "examples": "Példamondatok",
+  "noExamples": "Nincsenek elérhető példamondatok",
+  "pronounce": "Kiejtés",
+  "ttsError": "Szövegfelolvasás nem elérhető",
+  "noItemsFound": "Nem található elem",
+  "noItemsInPackage": "Még nincs elem ebben a csomagban",
+  "clearFilters": "Szűrők törlése",
+  "itemCount": "{count} elem",
+  "filteredItemCount": "{filtered} / {total} elem",
+  "trainingRally": "Gyakorlás",
+  "startTraining": "Gyakorlás kezdése",
+  "trainingComingSoon": "Gyakorlás - Hamarosan!"
 }
