--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,7 +2,6 @@
   "helloWorld": "Hello World!",
   "welcome": "Welcome to Language Rally",
   "appTitle": "Language Rally",
-
   "createPackage": "Create Package",
   "editPackage": "Edit Package",
   "packageDetails": "Package Details",
@@ -91,6 +90,7 @@
   "expand": "Expand",
   "allCategories": "All Categories",
   "categoriesInPackage": "Categories in this package",
+  "categories": "Categories",
   "testInterFonts": "Test Inter Fonts",
   "viewPackages": "View Packages",
   "createNewPackage": "Create New Package",
@@ -132,5 +132,78 @@
   "filteredItemCount": "{filtered} of {total} items",
   "trainingRally": "Training Rally",
   "startTraining": "Start Training",
-  "trainingComingSoon": "Training Rally - Coming Soon!"
+  "trainingComingSoon": "Training Rally - Coming Soon!",
+  "aiServiceNotConfigured": "AI service not configured. Please add your OpenAI API key.",
+  "pleaseEnterTextInLanguageFirst": "Please enter text in {language} first",
+  "translationCompletedSuccessfully": "Translation completed successfully using {service}!",
+  "translationFailed": "Translation failed",
+  "addedExamplesSuccessfully": "Added {count} example(s) successfully!",
+  "failedToGenerateExamples": "Failed to generate examples",
+  "selectExamplesToAdd": "Select Examples to Add",
+  "selectWhichExamples": "Select which examples you want to add to this item:",
+  "deselectAll": "Deselect All",
+  "selectAll": "Select All",
+  "addSelected": "Add Selected",
+  "pleaseSelectAtLeastOne": "Please select at least one example",
+  "addNewItem": "Add New Item",
+  "editItem": "Edit Item",
+  "deleteItem": "Delete Item",
+  "confirmDeleteItem": "Are you sure you want to delete this item?",
+  "thisActionCannotBeUndone": "This action cannot be undone.",
+  "itemDeleted": "Item deleted",
+  "errorDeletingItem": "Error deleting item",
+  "errorSavingItem": "Error saving item",
+  "itemSaved": "Item updated successfully",
+  "itemCreated": "Item created successfully",
+  "preTextOptional": "Pre-text (optional)",
+  "mainText": "Main text",
+  "postTextOptional": "Post-text (optional)",
+  "forExampleToForVerbs": "e.g., \"to\" for verbs",
+  "additionalContext": "Additional context",
+  "translate": "Translate",
+  "translateFromTo": "Translate {from} → {to}",
+  "aiExampleGeneration": "AI Example Generation",
+  "aiExampleSearch": "AI Example Search",
+  "searchExamplesOnInternet": "Search for example sentences on the internet using AI for '{text}'",
+  "generateExampleSentences": "Generate example sentences based on the main text in {language}",
+  "generateExamples": "Generate Examples",
+  "voiceInput": "Voice input",
+  "settings": "Settings",
+  "userLanguage": "User Language",
+  "userLanguageDescription": "Your preferred UI language",
+  "apiKeys": "API Keys",
+  "deeplApiKey": "DeepL API Key",
+  "deeplApiKeyDescription": "For premium translation quality (optional)",
+  "openaiApiKey": "OpenAI API Key",
+  "openaiApiKeyDescription": "For AI example generation",
+  "enterApiKey": "Enter API key",
+  "optional": "optional",
+  "required": "required",
+  "settingsSaved": "Settings saved successfully",
+  "errorSavingSettings": "Error saving settings",
+  "usingGoogleTranslate": "Using free Google Translate",
+  "usingDeepL": "Using DeepL (premium)",
+  "textCannotBeEmpty": "Text cannot be empty",
+  "noTranslationReceivedFromGoogle": "No translation received from Google",
+  "googleTranslationFailed": "Google translation failed",
+  "googleTranslationError": "Google translation error",
+  "noTranslationReceivedFromDeepL": "No translation received from DeepL",
+   "invalidDeepLApiKey": "Invalid DeepL API key",
+  "deeplTranslationQuotaExceeded": "DeepL translation quota exceeded",
+  "deeplTranslationFailed": "DeepL translation failed",
+  "deeplTranslationError": "DeepL translation error",
+  "invalidApiKeyConfigureOpenAI": "Invalid API key. Please configure your OpenAI API key.",
+  "apiRateLimitExceeded": "API rate limit exceeded. Please try again later.",
+  "aiRequestFailed": "AI request failed",
+  "failedToParseAiResponse": "Failed to parse AI response. Please try again.",
+  "aiGenerationError": "AI generation error",
+  "voiceInputPlaceholder": "Voice input will be implemented using speech_to_text package",
+  "improveQualityWithApiKeys": "💡 Tip: The quality of translations and example searches can be significantly improved by adding your DeepL and OpenAI API keys in the application settings.",
+  "noApiKeyFallbackMessage": "Without API keys, basic translation and limited examples are provided. For best results, configure your API keys in Settings.",
+  "listeningForSpeech": "Listening... Speak now",
+  "speechRecognitionNotAvailable": "Speech recognition is not available on this device",
+  "speechRecognitionPermissionDenied": "Speech recognition permission was denied",
+  "speechRecognitionError": "Speech recognition error",
+  "tapToSpeak": "Tap microphone to speak",
+  "speechNotRecognized": "No speech was recognized. Please try again."
 }
