--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -91,6 +91,7 @@
   "expand": "Kibontás",
   "allCategories": "Összes kategória",
   "categoriesInPackage": "Kategóriák ebben a csomagban",
+  "categories": "Kategóriák",
   "testInterFonts": "Inter betűtípusok tesztelése",
   "viewPackages": "Csomagok megtekintése",
   "createNewPackage": "Új csomag létrehozása",
@@ -132,5 +133,78 @@
   "filteredItemCount": "{filtered} / {total} elem",
   "trainingRally": "Gyakorlás",
   "startTraining": "Gyakorlás kezdése",
-  "trainingComingSoon": "Gyakorlás - Hamarosan!"
+  "trainingComingSoon": "Gyakorlás - Hamarosan!",
+  "aiServiceNotConfigured": "AI szolgáltatás nincs konfigurálva. Kérlek, add meg az OpenAI API kulcsot.",
+  "pleaseEnterTextInLanguageFirst": "Kérlek, először adj meg szöveget {language} nyelven",
+  "translationCompletedSuccessfully": "Fordítás sikeresen elkészült ({service})!",
+  "translationFailed": "Fordítás sikertelen",
+  "addedExamplesSuccessfully": "{count} példa sikeresen hozzáadva!",
+  "failedToGenerateExamples": "Példák generálása sikertelen",
+  "selectExamplesToAdd": "Példák kiválasztása",
+  "selectWhichExamples": "Válaszd ki, melyik példákat szeretnéd hozzáadni:",
+  "deselectAll": "Összes kijelölésének törlése",
+  "selectAll": "Összes kijelölése",
+  "addSelected": "Kijelöltek hozzáadása",
+  "pleaseSelectAtLeastOne": "Kérlek, válassz ki legalább egy példát",
+  "addNewItem": "Új elem hozzáadása",
+  "editItem": "Elem szerkesztése",
+  "deleteItem": "Elem törlése",
+  "confirmDeleteItem": "Biztosan törölni szeretnéd ezt az elemet?",
+  "thisActionCannotBeUndone": "Ez a művelet nem vonható vissza.",
+  "itemDeleted": "Elem törölve",
+  "errorDeletingItem": "Hiba az elem törlésekor",
+  "errorSavingItem": "Hiba az elem mentésekor",
+  "itemSaved": "Elem sikeresen frissítve",
+  "itemCreated": "Elem sikeresen létrehozva",
+  "preTextOptional": "Elő-szöveg (opcionális)",
+  "mainText": "Fő szöveg",
+  "postTextOptional": "Utó-szöveg (opcionális)",
+  "forExampleToForVerbs": "pl. \"to\" igéknél angolul",
+  "additionalContext": "További kontextus",
+  "translate": "Fordítás",
+  "translateFromTo": "Fordítás {from} → {to}",
+  "aiExampleGeneration": "AI példa generálás",
+  "aiExampleSearch": "AI példa keresés",
+  "searchExamplesOnInternet": "Példamondatok keresése az interneten AI segítségével ehhez: '{text}'",
+  "generateExampleSentences": "Példamondatok generálása a fő szöveg alapján ({language})",
+  "generateExamples": "Példák generálása",
+  "voiceInput": "Hangbemenet",
+  "settings": "Beállítások",
+  "userLanguage": "Felhasználói nyelv",
+  "userLanguageDescription": "Az általad preferált felület nyelv",
+  "apiKeys": "API kulcsok",
+  "deeplApiKey": "DeepL API kulcs",
+  "deeplApiKeyDescription": "Prémium fordítási minőséghez (opcionális)",
+  "openaiApiKey": "OpenAI API kulcs",
+  "openaiApiKeyDescription": "AI példa generáláshoz",
+  "enterApiKey": "API kulcs megadása",
+  "optional": "opcionális",
+  "required": "kötelező",
+  "settingsSaved": "Beállítások sikeresen mentve",
+  "errorSavingSettings": "Hiba a beállítások mentésekor",
+  "usingGoogleTranslate": "Ingyenes Google Fordító használata",
+  "usingDeepL": "DeepL használata (prémium)",
+  "textCannotBeEmpty": "A szöveg nem lehet üres",
+  "noTranslationReceivedFromGoogle": "Nem érkezett fordítás a Google-től",
+  "googleTranslationFailed": "Google fordítás sikertelen",
+  "googleTranslationError": "Google fordítási hiba",
+  "noTranslationReceivedFromDeepL": "Nem érkezett fordítás a DeepL-től",
+  "invalidDeepLApiKey": "Érvénytelen DeepL API kulcs",
+  "deeplTranslationQuotaExceeded": "DeepL fordítási kvóta túllépve",
+  "deeplTranslationFailed": "DeepL fordítás sikertelen",
+  "deeplTranslationError": "DeepL fordítási hiba",
+  "invalidApiKeyConfigureOpenAI": "Érvénytelen API kulcs. Kérlek, konfiguráld az OpenAI API kulcsot.",
+  "apiRateLimitExceeded": "API sebesség limit túllépve. Kérlek, próbáld újra később.",
+  "aiRequestFailed": "AI kérés sikertelen",
+  "failedToParseAiResponse": "AI válasz feldolgozása sikertelen. Kérlek, próbáld újra.",
+  "aiGenerationError": "AI generálási hiba",
+  "voiceInputPlaceholder": "Hangbemenet a speech_to_text csomag használatával lesz megvalósítva",
+  "improveQualityWithApiKeys": "💡 Tipp: A fordítások és példakeresések minősége jelentősen javítható a DeepL és OpenAI API kulcsok megadásával az alkalmazás beállításokban.",
+  "noApiKeyFallbackMessage": "API kulcsok nélkül alapszintű fordítás és korlátozott példák érhetők el. A legjobb eredményekhez állítsd be az API kulcsokat a Beállításokban.",
+  "listeningForSpeech": "Figyelek... Beszélj most",
+  "speechRecognitionNotAvailable": "Beszédfelismerés nem elérhető ezen az eszközön",
+  "speechRecognitionPermissionDenied": "Beszédfelismerési engedély megtagadva",
+  "speechRecognitionError": "Beszédfelismerési hiba",
+  "tapToSpeak": "Koppints a mikrofonra a beszédhez",
+  "speechNotRecognized": "Nem sikerült felismerni a beszédet. Kérlek, próbáld újra."
 }
