--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -17,6 +17,7 @@
   "version": "Version",
   "items": "items",
   "packageIcon": "Package Icon",
+  "packageGroup": "Package Group",
   "selectIcon": "Select Icon",
   "defaultIcon": "Default Icon",
   "customIcon": "Custom Icon",
@@ -122,6 +123,7 @@
   "important": "Important",
   "favourite": "Favourite",
   "examples": "Examples",
+  "examplesHint": "Enter example sentences (one per line, use | to separate languages)",
   "noExamples": "No examples available",
   "pronounce": "Pronounce",
   "ttsError": "Text-to-speech not available",
@@ -205,5 +207,28 @@
   "speechRecognitionPermissionDenied": "Speech recognition permission was denied",
   "speechRecognitionError": "Speech recognition error",
   "tapToSpeak": "Tap microphone to speak",
-  "speechNotRecognized": "No speech was recognized. Please try again."
+  "speechNotRecognized": "No speech was recognized. Please try again.",
+  "trainingSettings": "Training Settings",
+  "itemScope": "Item Scope",
+  "lastNItems": "Last N items",
+  "onlyUnknown": "Only unknown items",
+  "onlyImportant": "Only important items",
+  "numberOfItems": "Number of Items",
+  "itemOrder": "Item Order",
+  "randomOrder": "Random order",
+  "sequentialOrder": "Sequential order",
+  "displayLanguage": "Display Language",
+  "motherTongue": "Mother tongue",
+  "targetLanguage": "Target language",
+  "randomLanguage": "Random",
+  "categoryFilter": "Category Filter",
+  "categoryFilterHint": "Select categories to include (empty = all categories)",
+  "noCategories": "No categories available",
+  "dontKnowThreshold": "Don't Know Threshold",
+  "dontKnowThresholdHint": "Number of times an item needs to be marked as 'don't know' before special handling",
+  "startTrainingRally": "Start Training Rally",
+  "clearTrainingSettings": "Clear Settings",
+  "confirmClearTrainingSettings": "Are you sure you want to reset all training settings to default values?",
+  "trainingSettingsCleared": "Training settings have been cleared",
+  "startingTraining": "Starting training..."
 }
