--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -18,6 +18,7 @@
   "version": "Verzió",
   "items": "elem",
   "packageIcon": "Csomag ikon",
+  "packageGroup": "Csoport",
   "selectIcon": "Ikon kiválasztása",
   "defaultIcon": "Alapértelmezett ikon",
   "customIcon": "Egyéni ikon",
@@ -123,6 +124,7 @@
   "important": "Fontos",
   "favourite": "Kedvenc",
   "examples": "Példamondatok",
+  "examplesHint": "Írj be példamondatokat (soronként egyet, használj | jelet a nyelvek elválasztására)",
   "noExamples": "Nincsenek elérhető példamondatok",
   "pronounce": "Kiejtés",
   "ttsError": "Szövegfelolvasás nem elérhető",
@@ -206,5 +208,28 @@
   "speechRecognitionPermissionDenied": "Beszédfelismerési engedély megtagadva",
   "speechRecognitionError": "Beszédfelismerési hiba",
   "tapToSpeak": "Koppints a mikrofonra a beszédhez",
-  "speechNotRecognized": "Nem sikerült felismerni a beszédet. Kérlek, próbáld újra."
+  "speechNotRecognized": "Nem sikerült felismerni a beszédet. Kérlek, próbáld újra.",
+  "trainingSettings": "Edzés Beállítások",
+  "itemScope": "Elemek Köre",
+  "lastNItems": "Utolsó N elem",
+  "onlyUnknown": "Csak ismeretlen elemek",
+  "onlyImportant": "Csak fontos elemek",
+  "numberOfItems": "Elemek Száma",
+  "itemOrder": "Elemek Sorrendje",
+  "randomOrder": "Véletlenszerű sorrend",
+  "sequentialOrder": "Szekvenciális sorrend",
+  "displayLanguage": "Megjelenítési Nyelv",
+  "motherTongue": "Anyanyelv",
+  "targetLanguage": "Célnyelv",
+  "randomLanguage": "Véletlenszerű",
+  "categoryFilter": "Kategória Szűrő",
+  "categoryFilterHint": "Válaszd ki a kategóriákat (üres = minden kategória)",
+  "noCategories": "Nincsenek elérhető kategóriák",
+  "dontKnowThreshold": "Nem Tudom Küszöb",
+  "dontKnowThresholdHint": "Hányszor kell 'nem tudom'-nak jelölni egy elemet a speciális kezeléshez",
+  "startTrainingRally": "Edzés Rally Indítása",
+  "clearTrainingSettings": "Beállítások Törlése",
+  "confirmClearTrainingSettings": "Biztosan visszaállítod az összes edzési beállítást az alapértelmezett értékekre?",
+  "trainingSettingsCleared": "Az edzési beállítások törölve lettek",
+  "startingTraining": "Edzés indítása..."
 }
