Add UI Language selector with persistence - English and Hungarian dropdown in settings

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -171,13 +171,16 @@
   "generateExamples": "Generate Examples",
   "voiceInput": "Voice input",
   "settings": "Settings",
+  "uiLanguage": "UI Language",
+  "uiLanguageDescription": "Application interface language",
+  "uiLanguageHelper": "Select the language for menus, buttons, and labels",
   "userLanguage": "User Language",
-  "userLanguageDescription": "Your preferred UI language",
+  "userLanguageDescription": "Your preferred mother tongue for creating new language packages",
   "apiKeys": "API Keys",
   "deeplApiKey": "DeepL API Key",
-  "deeplApiKeyDescription": "For premium translation quality (optional)",
+  "deeplApiKeyDescription": "For premium translation quality when editing language items (optional)",
   "openaiApiKey": "OpenAI API Key",
-  "openaiApiKeyDescription": "For AI example generation",
+  "openaiApiKeyDescription": "For example generation with AI when editing language items (optional)",
   "enterApiKey": "Enter API key",
   "optional": "optional",
   "required": "required",
