--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -172,13 +172,16 @@
   "generateExamples": "Példák generálása",
   "voiceInput": "Hangbemenet",
   "settings": "Beállítások",
+  "uiLanguage": "Felület Nyelve",
+  "uiLanguageDescription": "Az alkalmazás felületének nyelve",
+  "uiLanguageHelper": "Válaszd ki a menük, gombok és címkék nyelvét",
   "userLanguage": "Felhasználói nyelv",
-  "userLanguageDescription": "Az általad preferált felület nyelv",
+  "userLanguageDescription": "A nyilvi csomagok létrehozásánál preferált anyanyelv",
   "apiKeys": "API kulcsok",
   "deeplApiKey": "DeepL API kulcs",
-  "deeplApiKeyDescription": "Prémium fordítási minőséghez (opcionális)",
+  "deeplApiKeyDescription": "Prémium fordítási minőséghez a tételek szerkesztésénél (opcionális)",
   "openaiApiKey": "OpenAI API kulcs",
-  "openaiApiKeyDescription": "AI példa generáláshoz",
+  "openaiApiKeyDescription": "Jó minőségű példák generáláshoz AI segítségével (opcionális)",
   "enterApiKey": "API kulcs megadása",
   "optional": "opcionális",
   "required": "kötelező",
