--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -115,6 +115,7 @@
   "searchLanguage2": "Search in {language}",
   "caseSensitive": "Case sensitive",
   "onlyImportant": "Only important items",
+  "onlyFavourite": "Only favourite items",
   "knownStatus": "Known status",
   "allItems": "All items",
   "itemsIKnew": "Items I knew",
@@ -216,6 +217,7 @@
   "lastNItems": "Last N items",
   "onlyUnknown": "Only unknown items",
   "onlyImportant": "Only important items",
+  "onlyFavourite": "Only favourite items",
   "numberOfItems": "Number of Items",
   "itemOrder": "Item Order",
   "randomOrder": "Random order",
