--- a/lib/l10n/app_hu.arb
+++ b/lib/l10n/app_hu.arb
@@ -42,12 +42,12 @@
   "noBadges": "Még nincs megszerzett jelvény",
   "selectLanguageCode": "Nyelvkód kiválasztása",
   "clearCounters": "Számlálók törlése",
-  "confirmClearCounters": "Biztosan törölni szeretné az összes edzési számlálót ebből a csomagból? Ez visszaállítja a 'nem tudom' számlálókat és az edzési statisztikákat.",
+  "confirmClearCounters": "Biztosan törölni szeretné az összes gyakorlásii számlálót ebből a csomagból? Ez visszaállítja a 'nem tudom' számlálókat és a gyakorlási statisztikákat.",
   "clear": "Törlés",
   "countersCleared": "Számlálók sikeresen törölve",
   "errorClearingCounters": "Hiba a számlálók törlése során",
   "deleteAll": "Csomag törlése",
-  "confirmDeleteAllData": "Biztosan törölni szeretné ezt a csomagot az ÖSSZES adatával? Ez véglegesen törli az összes kategóriát, elemet és edzési statisztikát. Ez a művelet nem vonható vissza!",
+  "confirmDeleteAllData": "Biztosan törölni szeretné ezt a csomagot az ÖSSZES adatával? Ez véglegesen törli az összes kategóriát, elemet és gyakorlási statisztikát. Ez a művelet nem vonható vissza!",
   "allDataDeleted": "Csomag és minden adat sikeresen törölve",
   "exportPackage": "Csomag exportálása",
   "selectExportLocation": "Exportálási hely kiválasztása",
@@ -116,6 +116,7 @@
   "searchLanguage2": "Keresés ebben: {language}",
   "caseSensitive": "Kis- és nagybetű érzékeny",
   "onlyImportant": "Csak fontos elemek",
+  "onlyFavourite": "Csak kedvenc elemek",
   "knownStatus": "Tudás állapota",
   "allItems": "Minden elem",
   "itemsIKnew": "Elemek, amiket tudtam",
@@ -212,11 +213,12 @@
   "speechRecognitionError": "Beszédfelismerési hiba",
   "tapToSpeak": "Koppints a mikrofonra a beszédhez",
   "speechNotRecognized": "Nem sikerült felismerni a beszédet. Kérlek, próbáld újra.",
-  "trainingSettings": "Edzés Beállítások",
+  "trainingSettings": "Gyakorlási Beállítások",
   "itemScope": "Elemek Köre",
   "lastNItems": "Utolsó N elem",
   "onlyUnknown": "Csak ismeretlen elemek",
   "onlyImportant": "Csak fontos elemek",
+  "onlyFavourite": "Csak kedvenc elemek",
   "numberOfItems": "Elemek Száma",
   "itemOrder": "Elemek Sorrendje",
   "randomOrder": "Véletlenszerű sorrend",
@@ -230,17 +232,17 @@
   "noCategories": "Nincsenek elérhető kategóriák",
   "dontKnowThreshold": "Nem Tudom Küszöb",
   "dontKnowThresholdHint": "Hányszor kell 'nem tudom'-nak jelölni egy elemet a speciális kezeléshez",
-  "startTrainingRally": "Edzés Rally Indítása",
+  "startTrainingRally": "Gyakorlási Rally Indítása",
   "clearTrainingSettings": "Beállítások Törlése",
-  "confirmClearTrainingSettings": "Biztosan visszaállítod az összes edzési beállítást az alapértelmezett értékekre?",
-  "trainingSettingsCleared": "Az edzési beállítások törölve lettek",
-  "startingTraining": "Edzés indítása...",
+  "confirmClearTrainingSettings": "Biztosan visszaállítod az összes gyakorlási beállítást az alapértelmezett értékekre?",
+  "trainingSettingsCleared": "A gyakorlási beállítások törölve lettek",
+  "startingTraining": "Gyakorlás indítása...",
   "noMoreItemsToDisplay": "Nincs több megjelenítendő elem a szűrési beállítások alapján.",
   "noItems": "Nincs Elem",
-  "trainingComplete": "Edzés Befejezve",
-  "allItemsCompleted": "Gratulálunk! Elvégezted az összes elemet ebben az edzésen.",
-  "closeTraining": "Edzés Bezárása",
-  "confirmCloseTraining": "Biztosan bezárod az edzést? A folyamatod mentve lett.",
+  "trainingComplete": "Gyakorlás Befejezve",
+  "allItemsCompleted": "Gratulálunk! Befejezted az összes elemet ebben a gyakorlásban.",
+  "closeTraining": "Gyakorlás Bezárása",
+  "confirmCloseTraining": "Biztosan bezárod a gyakorlást? A folyamatod mentve lett.",
   "question": "Kérdés",
   "answer": "Válasz",
   "iKnow": "Tudom",
