--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -114,8 +114,6 @@
   "searchLanguage1": "Search in {language}",
   "searchLanguage2": "Search in {language}",
   "caseSensitive": "Case sensitive",
-  "onlyImportant": "Only important items",
-  "onlyFavourite": "Only favourite items",
   "knownStatus": "Known status",
   "allItems": "All items",
   "itemsIKnew": "Items I knew",
@@ -247,5 +245,19 @@
   "iKnow": "I Know",
   "iDontKnow": "I Don't Know",
   "nextItem": "Next Item",
-  "iDidNotKnowEither": "I Didn't Know Either"
+  "iDidNotKnowEither": "I Didn't Know Either",
+  "exportBeforeDelete": "Export Before Deleting?",
+  "exportBeforeDeleteMessage": "Would you like to export this package before deleting it? This will save all your data to a ZIP file.",
+  "deleteWithoutExport": "Delete Without Export",
+  "exportAndDelete": "Export and Delete",
+  "exportingPackage": "Exporting package...",
+  "packageExportedToPath": "Package exported to: {path}",
+  "errorLoadingItems": "Error loading items: {error}",
+  "badgeEarnedWithName": "Badge Earned: {badgeName}!",
+  "badgeLostWithName": "Badge Lost: {badgeName}",
+  "speakText": "Speak text",
+  "trainingSessionProgress": "Training Session Progress",
+  "total": "Total",
+  "lastNValue": "N = {value}",
+  "errorLoadingSettings": "Error loading settings: {error}"
 }
